Updated: Seperated default server config into sites.d/default.conf.

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,7 @@ events {
     worker_connections  1024;
 }
 
+include conf.d/*.conf;
 
 http {
     include       mime.types;
@@ -30,29 +31,6 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-
-    server {
-        listen       80;
-        server_name  localhost;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-    }
-    include default.d/*.conf;
-    include conf.d/*.conf;
+    
+    include sites.d/*.conf;
 }
