--- a/default.conf
+++ b/default.conf
@@ -1,22 +1,17 @@
+# This is a default site configuration which will simply return 404, preventing
+# chance access to any other virtualhost.
+
 server {
-    listen       80;
-    server_name  localhost;
+        listen 80 default_server;
+        listen [::]:80 default_server;
 
-    #charset koi8-r;
+        # Everything is a 404
+        location / {
+                return 404;
+        }
 
-    #access_log  logs/host.access.log  main;
-
-    location / {
-        root   html;
-        index  index.html index.htm;
-    }
-
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   html;
-    }
+        # You may need this to prevent return 404 recursion.
+        location = /404.html {
+                internal;
+        }
 }
