--- a/nginx.conf
+++ b/nginx.conf
@@ -12,14 +12,15 @@ pcre_jit on;
 error_log /var/log/nginx/error.log warn;
 
 # Includes files with directives to load dynamic modules.
-include /etc/nginx/modules/*.conf;
-include /etc/nginx/conf.d/*.conf;
+include /etc/nginx/modules.d/*.conf;
 
 events {
         # The maximum number of simultaneous connections that can be opened by
         # a worker process.
         worker_connections 4096;
 }
+
+include /etc/nginx/conf.d/*.conf;
 
 http {
         # Includes mapping of file name extensions to MIME types of responses
