--- a/consul.d/default.cfg
+++ b/consul.d/default.cfg
@@ -2,5 +2,5 @@ template {
   source      = "/etc/nginx/sites.templates/services.tpl"
   destination = "/etc/nginx/sites.d/services.conf"
   perms       = 0600
-  command     = "nginx -t && nginx -s reload"
+  command     = "nginx -s reload"
 }
